--- a/a2e/a2e-ear/pom.xml
+++ b/a2e/a2e-ear/pom.xml
@@ -11,17 +11,21 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<artifactId>a2e-backend</artifactId>
-	<name>A2E - Back-end</name>
+	<artifactId>a2e-ear</artifactId>
+	<name>A2E - EAR</name>
+
+	<packaging>ear</packaging>
 
 	<dependencies>
 		<dependency>
-			<groupId>org.elasticsearch</groupId>
-			<artifactId>elasticsearch</artifactId>
+			<groupId>pt.devhub.a2e</groupId>
+			<artifactId>a2e-backend</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.json</groupId>
-			<artifactId>json</artifactId>
-		</dependency>
+            <groupId>pt.devhub.a2e</groupId>
+            <artifactId>a2efrontend</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 	</dependencies>
 </project>
