--- a/a2e/pom.xml
+++ b/a2e/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>pt.devhub.a2e</groupId>
+	<groupId>pt.devhub.javaee.a2e</groupId>
 	<artifactId>a2e</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
