--- a/a2e/a2e-backend/pom.xml
+++ b/a2e/a2e-backend/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>pt.devhub.a2e</groupId>
+		<groupId>pt.devhub.javaee.a2e</groupId>
 		<artifactId>a2e</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
